# particle-wave-runner

./: CMakeLists.txt  README.md  format.sh
include/: mesh.h  mesh_base.h  mpi_environment.h  mpi_utilities.h
src/: main.cpp  mesh.cpp
